  is set to the value of a field name, which also has to be a "scratch"
  value. If that is true, and the value of the field is true, the user
  will be promoted to $Vend::admin. They will not be $Vend::super. Note
  that this does not gain access to the classic Interchange UI without
  modification, since the login_table will not be admin (the test which is
  used in most cases).


Admin
-----

* Respect custom BACKUP_DIRECTORY in admin table downloads. This matches
  behavior expected by [export-database].

* Fix bug which blew away user's yes_tables and yes_functions setting when
  editing name/superuser status.
`
* Fix table editor composite key problems, both creating new and editing
  existing rows.

* Exclude canceled orders from reports.

* Remove support for ancient browsers and unused variables.

* Remove old help content.


Strap Demo Catalog
------------------

* Updated the versions of jQuery, Google Analytics, and Bootstrap used.

* Turn off UserDB ignore_case by default.

* Prevent browser autocomplete problems.

* Remove some legacy cart components.

* Formatting fixes on checkout pages.

* Fix broken random password number range; consistently make random
  instead of using zip or phone.

* Lengthen ip_addr database fields to support IPv6.

* Remove the option for session IDs in URLs, so cookies are always required.

* Add base configuration and settings to delegate [salestax] to 3rd-party tax
  APIs generally, and use of Tax Jar specifically.


Other
-----

* Updated te utility with several new features.

* Quickbooks integration: Fix typos so that removing stray trailing
  whitespace works.

* Add tools for viewing/manipulating existing Storage sessions.

* Remove old mod_perl artifacts.


Gateway Log
-----------

Vend::Payment::GatewayLog - Basic package and methods for enabling full
transaction logging in any of the gateways within the Vend::Payment::*
namespace.

Gateway logging is inactive by default. It can be explicitly enabled by